--- a/app/src/main/res/layout/activity_borrar.xml
+++ b/app/src/main/res/layout/activity_borrar.xml
@@ -3,20 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:gravity="center"
+    android:background="@drawable/testfondo">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pantalla de Borrar"
-        android:textSize="18sp"
+        android:text="Borrar"
         android:gravity="center"
-        android:layout_marginBottom="16dp" />
-
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:paddingBottom="20dp"
+        android:textAllCaps="true"
+        android:textColor="#F69AC0"
+        android:startColor="#345953"
+        android:textSize="30dp"
+        android:textStyle="bold|italic" />
+    <EditText
+        android:id="@+id/eliminartext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:textColorHint="#ADE9E4E4"
+        android:hint="Escriba el nombre del juego a eliminar"
+        />
+    <Button
+        android:id="@+id/btnEliminar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Eliminar"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button"/>
     <Button
         android:id="@+id/btnAtras"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Atrás" />
+        android:text="Atrás"
+        android:background="@drawable/button"
+        android:backgroundTint="#7FA90505"/>
 
 </LinearLayout>
