--- a/app/src/main/res/layout/activity_anadir.xml
+++ b/app/src/main/res/layout/activity_anadir.xml
@@ -3,20 +3,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:gravity="center"
+    android:background="@drawable/testfondo"
+    >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pantalla de Añadir"
+        android:text="Añadir"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:paddingBottom="20dp"
+        android:textAllCaps="true"
+        android:textColor="#F69AC0"
+        android:startColor="#345953"
+        android:textSize="30dp"
+        android:textStyle="bold|italic"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Escriba el nombre,tipo y la fecha"
         android:textSize="18sp"
         android:gravity="center"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:textColor="#E9E4E4"/>
+
+    <EditText
+        android:id="@+id/agregnombre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:textColorHint="#ADE9E4E4"
+        android:hint="Escriba el nombre"
+
+
+        />
+    <EditText
+        android:id="@+id/agregtipo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:textColorHint="#ADE9E4E4"
+        android:hint="Escriba el tipo"
+        />
+    <EditText
+        android:id="@+id/agregaryear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:textColorHint="#ADE9E4E4"
+        android:hint="Escriba el año"
+        />
+    <Button
+        android:id="@+id/btnAgregar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Añadir"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button"/>
 
     <Button
         android:id="@+id/btnAtras"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Atrás" />
+        android:background="@drawable/button"
+        android:backgroundTint="#7FA90505"
+        android:text="Atrás"
+        />
 
 </LinearLayout>
