--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@drawable/fondoAndroid2"
-    >
+    android:gravity="center"
+    android:background="@drawable/testfondo">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="140dp"
+        android:layout_height="149dp"
+        android:src="@drawable/dslogo" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:paddingBottom="40dp"
+        android:text="DS MANAGER"
+        android:textAllCaps="true"
+        android:textColor="#F69AC0"
+        android:textSize="30dp"
+        android:textStyle="bold|italic" />
 
     <Button
+
         android:id="@+id/btnListar"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#49FFFFFF"
+        android:background="@drawable/button"
+        android:backgroundTint="#62169BED"
         android:fontFamily="sans-serif"
-        android:text="Listar o Buscar con filtro"
-        android:textColor="#0D0B0B"
-        android:textSize="16sp" />
+        android:text="Listar y Buscar con filtro"
+        android:textColor="#E9E4E4"
+        android:textSize="12sp"
+        android:textStyle="bold|italic" />
 
     <Button
         android:id="@+id/btnAnadir"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#49FFFFFF"
+        android:background="@drawable/button"
+        android:backgroundTint="#62169BED"
         android:fontFamily="sans-serif"
         android:text="Añadir"
-        android:textColor="#0D0B0B"
-        android:textSize="16sp" />
+        android:textColor="#E9E4E4"
+        android:textSize="12sp"
+
+        android:textStyle="bold|italic" />
 
     <Button
         android:id="@+id/btnBorrar"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#49FFFFFF"
+        android:background="@drawable/button"
+        android:backgroundTint="#62169BED"
         android:fontFamily="sans-serif"
         android:text="Borrar"
-        android:textColor="#0D0B0B"
-        android:textSize="16sp" />
+        android:textColor="#E9E4E4"
+        android:textSize="12sp"
+
+        android:textStyle="bold|italic" />
 
     <Button
         android:id="@+id/btnActualizar"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#49FFFFFF"
+        android:background="@drawable/button"
+        android:backgroundTint="#62169BED"
         android:fontFamily="sans-serif"
         android:text="Actualizar"
-        android:textColor="#0D0B0B"
-        android:textSize="16sp" />
+        android:textColor="#E9E4E4"
+        android:textSize="12sp"
 
+        android:textStyle="bold|italic" />
+<!--Unica forma de que funcione?? <androidx.appcompat.widget.AppCompatButton -->
     <Button
         android:id="@+id/btnSalir"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#49FFFFFF"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:background="@drawable/button"
         android:fontFamily="sans-serif"
         android:text="Salir"
-        android:textColor="#0D0B0B"
-        android:textSize="16sp" />
-
+        android:textColor="#E9E4E4"
+        android:textSize="12sp"
+        android:textStyle="bold|italic" />
 </LinearLayout>
