--- a/app/src/main/res/drawable/button_red.xml
+++ b/app/src/main/res/drawable/button_red.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="100dip" />
-            <solid android:color="#CC0000" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="100dip" />
-            <solid android:color="#FF0000" />
-        </shape>
-    </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+<item android:state_pressed="true" >
+    <shape android:shape="rectangle"  >
+        <corners android:radius="100dip" />
+        <gradient android:angle="-90" android:startColor="#345953"   />
+    </shape>
+</item>
+<item android:state_focused="true">
+    <shape android:shape="rectangle"  >
+        <corners android:radius="100dip" />
+
+        <solid android:color="#AB2D2D"/>
+    </shape>
+</item>
+<item >
+    <shape android:shape="rectangle"  >
+        <corners android:radius="100dip" />
+
+        <gradient android:angle="-90" android:startColor="#851717"  />
+    </shape>
+</item>
 </selector>
