--- a/app/src/main/res/layout/activity_actualizar.xml
+++ b/app/src/main/res/layout/activity_actualizar.xml
@@ -30,20 +30,20 @@
         android:paddingBottom="20dp"
         android:textColorHint="#ADE9E4E4" />
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:text="Escriba los nuevos datos, dejar en blanco para mantener los datos anteriores."
         android:textSize="18sp"
         android:gravity="center"
         android:fontFamily="sans-serif"
-        android:textColor="#E9E4E4"
+        android:textColor="#EFE2E2"
         android:layout_margin="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/actnombre"
-        android:layout_width="320dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:hint="Escriba el nombre"
@@ -51,7 +51,7 @@
 
     <EditText
         android:id="@+id/acttipo"
-        android:layout_width="320dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:hint="Escriba el tipo"
@@ -59,18 +59,29 @@
 
     <EditText
         android:id="@+id/actyear"
-        android:layout_width="320dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:hint="Escriba el año"
         android:textColorHint="#ADE9E4E4" />
 
     <Button
+        android:id="@+id/btnActualizar"
+        android:textColor="#E9E4E4"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Actualizar"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button"/>
+
+    <Button
         android:id="@+id/btnAtras"
-        android:layout_width="wrap_content"
+        android:textColor="#E9E4E4"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Atrás"
-        android:background="@drawable/button"
+        android:background="@drawable/button_red"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#7FA90505"/>
+        />
 </LinearLayout>
