--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,6 @@
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button"
-        android:backgroundTint="#62169BED"
         android:fontFamily="sans-serif"
         android:text="Listar y Buscar con filtro"
         android:textColor="#E9E4E4"
@@ -48,7 +47,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button"
-        android:backgroundTint="#62169BED"
+
         android:fontFamily="sans-serif"
         android:text="Añadir"
         android:textColor="#E9E4E4"
@@ -62,7 +61,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button"
-        android:backgroundTint="#62169BED"
+
         android:fontFamily="sans-serif"
         android:text="Borrar"
         android:textColor="#E9E4E4"
@@ -76,7 +75,6 @@
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button"
-        android:backgroundTint="#62169BED"
         android:fontFamily="sans-serif"
         android:text="Actualizar"
         android:textColor="#E9E4E4"
@@ -88,7 +86,7 @@
         android:id="@+id/btnSalir"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:background="@drawable/button"
+        android:background="@drawable/button_red"
         android:fontFamily="sans-serif"
         android:text="Salir"
         android:textColor="#E9E4E4"
