--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Plantas" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.Plantas" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">#626445F6</item>
+        <item name="colorPrimaryDark">#9DCEC7</item>
+        <item name="colorAccent">#F69AC0</item>
+
+        <!-- Deshabilitar estilos Material para botones -->
+        <item name="buttonStyle">@style/MyButtonStyle</item>
+        <item name="android:buttonStyle">@style/MyButtonStyle</item>
+    </style>
+
+    <style name="MyButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@null</item>
+        <item name="android:backgroundTint">@null</item>
+        <item name="backgroundTint">@null</item>
     </style>
 
     <style name="Theme.Plantas" parent="Base.Theme.Plantas" />
